--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.71.0",
     "svelte": "^4.2.7",
     "svelte-adapter-bun": "^0.5.1",
+    "svelte-awesome-color-picker": "^3.0.6",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -28,7 +29,6 @@
   "type": "module",
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.7",
-    "svelte-awesome-color-picker": "^3.0.6"
+    "@supabase/supabase-js": "^2.39.7"
   }
 }
