--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -19,7 +18,6 @@
     "node-sass": "^9.0.0",
     "sass": "^1.71.0",
     "svelte": "^4.2.7",
-    "svelte-adapter-bun": "^0.5.1",
     "svelte-awesome-color-picker": "^3.0.6",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
@@ -28,7 +26,6 @@
   },
   "type": "module",
   "dependencies": {
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.7"
+    "@supabase/ssr": "^0.3.0"
   }
 }
