--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte": "^4.2.7",
     "svelte-awesome-color-picker": "^3.0.6",
     "svelte-check": "^3.6.0",
+    "svelte-dnd-action": "^0.9.43",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.1.7"
