--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.1.7"
+    "vite": "^5.1.7",
+    "vitest": "^1.5.0"
   },
   "type": "module",
   "dependencies": {
