--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,12 +9,17 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: setup bun
+      uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: latest
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Install dependencies
+      run: bun i
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
