--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/node": "^20.12.7",
     "bulma": "^0.9.4",
+    "deepmerge-json": "^1.5.0",
     "node-sass": "^9.0.0",
     "playwright-extra": "^4.3.6",
     "sass": "^1.71.0",
