Added calculation visualizer

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@supabase/ssr": "^0.3.0"
+    "@supabase/ssr": "^0.3.0",
+    "source-map-support": "^0.5.21"
   }
 }
