--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "playwright-extra": "^4.3.6",
     "sass": "^1.71.0",
     "svelte": "^4.2.7",
+    "svelte-adapter-bun": "^0.5.2",
     "svelte-awesome-color-picker": "^3.0.6",
     "svelte-check": "^3.6.0",
     "svelte-dnd-action": "^0.9.43",
