--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   "devDependencies": {
     "@playwright/test": "^1.43.1",
     "@sveltejs/adapter-node": "^4.0.1",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/kit": "^2.8.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@types/node": "^20.12.7",
     "deepmerge-json": "^1.5.0",
     "node-sass": "^9.0.0",
     "playwright-extra": "^4.3.6",
     "sass": "^1.71.0",
-    "svelte": "^4.2.7",
+    "svelte": "^4.2.14",
     "svelte-adapter-bun": "^0.5.2",
     "svelte-awesome-color-picker": "^3.0.6",
-    "svelte-check": "^3.6.0",
+    "svelte-check": "^3.6.9",
     "svelte-dnd-action": "^0.9.43",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.1.7",
-    "vitest": "^1.5.0"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
+    "vitest": "^2.1.5"
   },
   "type": "module",
   "dependencies": {
@@ -38,6 +38,8 @@
     "source-map-support": "^0.5.21"
   },
   "trustedDependencies": [
+    "@sveltejs/kit",
+    "esbuild",
     "svelte-preprocess"
   ]
 }
