--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "bunx --bun vite",
-    "build": "bun x vite build",
+    "dev": "bun vite",
+    "build": "bun vite build",
     "css-build": "node-sass --omit-source-map-url src/sass/mystyles.scss src/css/mystyles.css",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -14,23 +14,23 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.43.1",
-    "@sveltejs/adapter-node": "^4.0.1",
-    "@sveltejs/kit": "^2.8.1",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
-    "@types/node": "^20.12.7",
+    "@sveltejs/adapter-node": "^5.2.9",
+    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.1",
+    "@types/node": "^22.10.1",
     "deepmerge-json": "^1.5.0",
     "node-sass": "^9.0.0",
     "playwright-extra": "^4.3.6",
-    "sass": "^1.71.0",
-    "svelte": "^4.2.19",
+    "sass": "^1.81.0",
+    "svelte": "^5.3.0",
     "svelte-adapter-bun": "^0.5.2",
-    "svelte-awesome-color-picker": "^3.0.6",
-    "svelte-check": "^3.6.9",
-    "svelte-dnd-action": "^0.9.43",
-    "tslib": "^2.4.1",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11",
-    "vitest": "^2.1.5"
+    "svelte-awesome-color-picker": "^3.1.4",
+    "svelte-check": "^4.1.0",
+    "svelte-dnd-action": "^0.9.52",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.1",
+    "vitest": "^2.1.6"
   },
   "type": "module",
   "dependencies": {
@@ -38,6 +38,7 @@
     "source-map-support": "^0.5.21"
   },
   "trustedDependencies": [
+    "@parcel/watcher",
     "@sveltejs/kit",
     "esbuild",
     "svelte-preprocess"
